force-app/main/default/objects/Inbound_Transaction__c/Inbound_Transaction__c.object-meta.xml
<CustomObject>
    <label>Inbound Transaction</label>
    <nameField>
        <label>Inbound Transaction Name</label>
        <type>AutoNumber</type>
        <displayFormat>IT-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Inbound Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Wallet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wallet</label>
        <referenceTo>Wallet__c</referenceTo>
        <relationshipLabel>Inbound Transactions</relationshipLabel>
        <relationshipName>Inbound_Transactions</relationshipName>
        <type>MasterDetail</type>
    </fields>
</CustomObject>