force-app/main/default/objects/Inbound_Transaction__c/fields/Block_Height__c.field-meta.xml
<CustomField>
    <fullName>Block_Height__c</fullName>
    <label>Block Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 