force-app/main/default/objects/Inbound_Transaction__c/fields/Block_Time__c.field-meta.xml
<CustomField>
    <fullName>Block_Time__c</fullName>
    <label>Block Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 