force-app/main/default/objects/Inbound_Transaction__c/fields/Data_Hash__c.field-meta.xml
<CustomField>
    <fullName>Data_Hash__c</fullName>
    <label>Data Hash</label>
    <type>Text</type>
    <length>255</length>
</CustomField> 