force-app/main/default/objects/Inbound_Transaction__c/fields/Inline_Datum__c.field-meta.xml
<CustomField>
    <fullName>Inline_Datum__c</fullName>
    <label>Inline Datum</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField> 