force-app/main/default/objects/Inbound_Transaction__c/fields/Reference_Script_Hash__c.field-meta.xml
<CustomField>
    <fullName>Reference_Script_Hash__c</fullName>
    <label>Reference Script Hash</label>
    <type>Text</type>
    <length>255</length>
</CustomField> 