force-app/main/default/objects/Inbound_Transaction__c/fields/Transaction_Hash__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Hash__c</fullName>
    <externalId>true</externalId>
    <label>Transaction Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>