force-app/main/default/objects/Inbound_Transaction__c/fields/UTXO_Address__c.field-meta.xml
<CustomField>
    <fullName>UTXO_Address__c</fullName>
    <label>UTXO Address</label>
    <type>MasterDetail</type>
    <referenceTo>UTXO_Address__c</referenceTo>
    <relationshipLabel>Inbound Transactions</relationshipLabel>
    <relationshipName>Inbound_Transactions</relationshipName>
    <reparentableMasterDetail>true</reparentableMasterDetail>
</CustomField> 