force-app/main/default/objects/Inbound_Transaction__c/fields/Wallet__c.field-meta.xml
<CustomField>
    <fullName>Wallet__c</fullName>
    <label>Wallet</label>
    <type>Lookup</type>
    <referenceTo>Wallet__c</referenceTo>
    <relationshipLabel>Inbound Transactions</relationshipLabel>
    <relationshipName>Inbound_Transactions</relationshipName>
</CustomField> 